[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Options3D.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=2]

[node name="3D Options" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NewObjectMenuButton" type="MenuButton" parent="."]
margin_right = 1280.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Add new object"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LayerOptions" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1280.0
margin_bottom = 696.0
size_flags_vertical = 3
columns = 2

[node name="AmbientColorLabel" type="Label" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_top = 3.0
margin_right = 638.0
margin_bottom = 17.0
text = "Ambient color"

[node name="AmbientColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 20.0

[node name="ProjectionLabel" type="Label" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_top = 27.0
margin_right = 638.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Projection"

[node name="ProjectionOptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_left = 642.0
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Perspective"
items = [ "Perspective", null, false, 0, null, "Orthogonal", null, false, 1, null, "Frustum", null, false, 2, null ]
selected = 0

[node name="RotationLabel" type="Label" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_top = 81.0
margin_right = 638.0
margin_bottom = 95.0
size_flags_horizontal = 3
text = "Rotation"

[node name="RotationContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/LayerOptions"]
margin_left = 642.0
margin_top = 48.0
margin_right = 1280.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="CameraRotationX" parent="ScrollContainer/VBoxContainer/LayerOptions/RotationContainer" instance=ExtResource( 2 )]
margin_right = 638.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "X"
suffix = "°"

[node name="CameraRotationY" parent="ScrollContainer/VBoxContainer/LayerOptions/RotationContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 52.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "Y"
suffix = "°"

[node name="CameraRotationZ" parent="ScrollContainer/VBoxContainer/LayerOptions/RotationContainer" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 638.0
margin_bottom = 80.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "Z"
suffix = "°"

[node name="ObjectOptions" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 338.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_vertical = 3
columns = 2

[node name="PositionLabel" type="Label" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_right = 638.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Position"

[node name="PositionContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="ObjectPositionX" parent="ScrollContainer/VBoxContainer/ObjectOptions/PositionContainer" instance=ExtResource( 2 )]
margin_right = 638.0
min_value = -20.0
max_value = 20.0
step = 0.01
allow_greater = true
allow_lesser = true
prefix = "X"
suffix = "m"

[node name="ObjectPositionY" parent="ScrollContainer/VBoxContainer/ObjectOptions/PositionContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 52.0
min_value = -20.0
max_value = 20.0
step = 0.01
allow_greater = true
allow_lesser = true
prefix = "Y"
suffix = "m"

[node name="ObjectPositionZ" parent="ScrollContainer/VBoxContainer/ObjectOptions/PositionContainer" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 638.0
margin_bottom = 80.0
min_value = -20.0
max_value = 20.0
step = 0.01
allow_greater = true
allow_lesser = true
prefix = "Z"
suffix = "m"

[node name="RotationLabel" type="Label" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_top = 84.0
margin_right = 638.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Rotation"

[node name="RotationContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_left = 642.0
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="ObjectRotationX" parent="ScrollContainer/VBoxContainer/ObjectOptions/RotationContainer" instance=ExtResource( 2 )]
margin_right = 638.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "X"
suffix = "°"

[node name="ObjectRotationY" parent="ScrollContainer/VBoxContainer/ObjectOptions/RotationContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 52.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "Y"
suffix = "°"

[node name="ObjectRotationZ" parent="ScrollContainer/VBoxContainer/ObjectOptions/RotationContainer" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 638.0
margin_bottom = 80.0
min_value = -180.0
max_value = 180.0
step = 0.1
prefix = "Z"
suffix = "°"

[node name="ScaleLabel" type="Label" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_top = 168.0
margin_right = 638.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Scale"

[node name="ScaleContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ObjectOptions"]
margin_left = 642.0
margin_top = 168.0
margin_right = 1280.0
margin_bottom = 248.0
size_flags_horizontal = 3

[node name="ObjectScaleX" parent="ScrollContainer/VBoxContainer/ObjectOptions/ScaleContainer" instance=ExtResource( 2 )]
margin_right = 638.0
step = 0.1
value = 100.0
allow_greater = true
allow_lesser = true
prefix = "X"
suffix = "%"

[node name="ObjectScaleY" parent="ScrollContainer/VBoxContainer/ObjectOptions/ScaleContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 52.0
step = 0.1
value = 100.0
allow_greater = true
allow_lesser = true
prefix = "Y"
suffix = "%"

[node name="ObjectScaleZ" parent="ScrollContainer/VBoxContainer/ObjectOptions/ScaleContainer" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 638.0
margin_bottom = 80.0
step = 0.1
value = 100.0
allow_greater = true
allow_lesser = true
prefix = "Z"
suffix = "%"

[node name="UndoRedoTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="UndoRedoTimer" to="." method="_on_UndoRedoTimer_timeout"]
